# resume-library

./: README.md  bootstrap-generator.ps1  generate_resumes.py  index-inbox.ps1  init-resume-library.ps1  resume_config.json  resume_ui.py  setup_resumes.ps1
sources/inbox/auto-apply-pro/: .env.example  .gitignore  Install.ps1  README.md  alembic.ini  config.yaml  pyproject.toml  requirements.txt
sources/inbox/auto-apply-pro/alembic/: env.py
sources/inbox/auto-apply-pro/alembic/versions/: 0001_init.py
sources/inbox/auto-apply-pro/app/: cl_generator.py  config.py  database.py  jd_parser.py  main.py  models.py  resume.py  schemas.py
sources/inbox/auto-apply-pro/app/adapters/: base.py  generic.py  greenhouse.py  lever.py  workday.py
sources/inbox/auto-apply-pro/app/automation/: apply_flow.py  utils.py
sources/inbox/auto-apply-pro/app/static/: readme.txt
sources/inbox/auto-apply-pro/app/templates/: application_detail.html  (+5 more)
sources/inbox/auto-apply-pro/cli/: main.py
sources/inbox/auto-apply-pro/cover_letter_templates/: concise.jinja2  default.jinja2
sources/inbox/auto-apply-pro/cover_letters/: README.txt  example_acme_software_engineer.txt
sources/inbox/auto-apply-pro/mock_site/: form.html
sources/inbox/auto-apply-pro/profiles/: main_resume.txt  software-engineer.json
sources/inbox/auto-apply-pro/samples/: job_description.txt  jobs.csv
sources/inbox/auto-apply-pro/scripts/: preflight.ps1  preflight.sh  run.ps1  run.sh
sources/inbox/auto-apply-pro/tests/: conftest.py  test_cl_generation.py  test_logging.py  test_parsing.py  test_playwright_e2e.py
(+124 files in other folders)
