[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-apply-pro"
version = "0.1.0"
description = "Auto-Apply Pro: job parser, cover-letter generator, compliant autofill, and logger."
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
